fixed nav text color on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -35,7 +35,6 @@
     padding: 0.7rem 1rem;
     display: inline;
     font-size: 1.1rem;
-    color:var(--accent);
     text-decoration:none;
     line-height: 3;
   }
